[gd_scene load_steps=10 format=3 uid="uid://xp2woouhmaf8"]

[ext_resource type="Script" uid="uid://cg1mrc3pr864y" path="res://Charles Tracey - Project Manager/enemy.gd" id="1_8uhvq"]
[ext_resource type="FontFile" uid="uid://wsa2utca31dd" path="res://Charles Tracey - Project Manager/call-of-ops-duty-font/CallOfOpsDuty-qAyq.ttf" id="2_hryg0"]
[ext_resource type="PackedScene" uid="uid://ctmg4j5kbvjga" path="res://Patrick/ENEMYFOLLOWER/follower.glb" id="3_m83rg"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_m83rg"]

[sub_resource type="SphereShape3D" id="SphereShape3D_8uhvq"]
radius = 5.095

[sub_resource type="SphereShape3D" id="SphereShape3D_hryg0"]
radius = 16.375

[sub_resource type="BoxShape3D" id="BoxShape3D_hryg0"]
size = Vector3(0.614197, 1, 0.55188)

[sub_resource type="BoxShape3D" id="BoxShape3D_8uhvq"]
size = Vector3(0.8, 1.717, 0.8)

[sub_resource type="BoxShape3D" id="BoxShape3D_m83rg"]
size = Vector3(1, 2, 1)

[node name="enemy" type="CharacterBody3D" groups=["enemy"]]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0)
axis_lock_angular_x = true
axis_lock_angular_z = true
script = ExtResource("1_8uhvq")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]

[node name="follower" parent="MeshInstance3D" instance=ExtResource("3_m83rg")]
transform = Transform3D(-0.415, 0, -6.26633e-08, 0, 0.415, 0, 6.26633e-08, 0, -0.415, 0, -0.646959, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.158721, 0)
shape = SubResource("CapsuleShape3D_m83rg")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_height_offset = 0.1

[node name="Inner Detection Radius" type="Area3D" parent="."]
collision_layer = 128
collision_mask = 128

[node name="CollisionShape3D" type="CollisionShape3D" parent="Inner Detection Radius"]
shape = SubResource("SphereShape3D_8uhvq")

[node name="Outer Detection Radius" type="Area3D" parent="."]
collision_layer = 128
collision_mask = 128

[node name="CollisionShape3D" type="CollisionShape3D" parent="Outer Detection Radius"]
shape = SubResource("SphereShape3D_hryg0")

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.026225)
collision_layer = 144
collision_mask = 144

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1.69, 0, 0, 0, 1.69, 0, 0, 0, 1.69, -0.0389389, 0, -0.0342282)
shape = SubResource("BoxShape3D_hryg0")

[node name="Damage_Checker" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="Health_Indicator" type="Label3D" parent="Damage_Checker"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 1.34506, 0)
text = "aa"
font = ExtResource("2_hryg0")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Damage_Checker"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.101227, 0)
shape = SubResource("BoxShape3D_8uhvq")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Crouching_Checker" type="Timer" parent="."]
wait_time = 0.001
autostart = true

[node name="Enemy_Gun_Collider" type="Area3D" parent="."]
collision_layer = 64
collision_mask = 64

[node name="CollisionShape3D" type="CollisionShape3D" parent="Enemy_Gun_Collider"]
shape = SubResource("BoxShape3D_m83rg")

[node name="Eyeline" type="Area3D" parent="."]

[node name="CollisionPolygon3D" type="CollisionPolygon3D" parent="Eyeline"]
transform = Transform3D(1.31134e-07, 1, 4.37114e-08, 3.82137e-15, 4.37114e-08, -1, -1, 1.31134e-07, 1.91069e-15, -1.13958, 0, 7.37733)
polygon = PackedVector2Array(7.827, 1.11, 17.546, 6.58, 17.5456, -2.23985)

[connection signal="area_entered" from="Inner Detection Radius" to="." method="_on_inner_detection_radius_area_entered"]
[connection signal="area_exited" from="Inner Detection Radius" to="." method="_on_inner_detection_radius_area_exited"]
[connection signal="area_exited" from="Outer Detection Radius" to="." method="_on_outer_detection_radius_area_exited"]
[connection signal="area_shape_entered" from="Area3D" to="." method="_on_area_3d_area_shape_entered"]
[connection signal="area_shape_exited" from="Area3D" to="." method="_on_area_3d_area_shape_exited"]
[connection signal="area_entered" from="Damage_Checker" to="." method="_on_damage_checker_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Crouching_Checker" to="." method="_on_crouching_checker_timeout"]
